--- a/candidate_Profile.html
+++ b/candidate_Profile.html
@@ -31,7 +31,7 @@
     <!-- Start of Navbar -->
     <nav id="navbar" class="navbar navbar1 px-0 navbar-expand-lg px-5 py-3  mb-0">
         <div class="container">
-            <a href="{{url('/')}}" class="navbar-brand">
+            <a href="C:\Users\Haroon\OneDrive\Documents\GitHub\Visumify\index.htm" class="navbar-brand">
                 <img src="Assets/img/logo.png" alt="Visumify Logo" class=" " style="color:#CBCBCB">
             </a>
             <button type="button" class="navbar-toggler " data-toggle="collapse" data-target="#navDiv">
