--- a/candidate_dashboard.html
+++ b/candidate_dashboard.html
@@ -143,7 +143,7 @@
                             <li>Portfolio</li>
                             <li>Skills</li>
                             <li>Honors Award</li>
-                        </ul> 
+                        </ul>
                     </div>
 
                     <div class="row sidebar-tabs my-2">
@@ -209,7 +209,7 @@
                     <div class="row sidebar-tabs my-2">
                         <div class="col-10 py-2">
                             <i class="fas fa-user"></i>
-                            <a data-toggle="collapse" href=""> View Profile</a>
+                            <a href="file:///C:/Users/Haroon/OneDrive/Documents/GitHub/Visumify/candidate_Profile.html"> View Profile</a>
                         </div>
                         <div class="col-2 pt-2">
                             <span class="fas fa-chevron-right"></span>
@@ -219,12 +219,47 @@
                     <div class="row sidebar-tabs my-2">
                         <div class="col-10 py-2">
                             <i class="fas fa-sign-out-alt"></i>
-                            <a data-toggle="collapse" href=""> Logout</a>
+                            <a href="file:///C:/Users/Haroon/OneDrive/Documents/GitHub/Visumify/index.htm"> Logout</a>
                         </div>
                         <div class="col-2 pt-2">
                             <span class="fas fa-chevron-right"></span>
                         </div>
                     </div>
+
+                    <div class="row my-2">
+                        <div class="col-12">
+                            <div class="skillBox">
+                                <div class="row">
+                                    <div class="col-8">
+                                        <h6>
+                                            Skill Percentage
+                                        </h6>
+                                    </div>
+                                    <div class="text-center col-3 pt-2 float-right">
+                                        <p class="text-center mt-1" style="background-color: #e5e5e5; font-size: 13px;">
+                                            80%
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="progress"
+                                            style="background-color: #e5e5e5; height: 12px; width: 80%; border-radius: 100px !important;">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="50"
+                                                aria-valuemin="0" aria-valuemax="100"
+                                                style="width:80%; height:12px; background-color:#55A747;">
+                                                <span class="sr-only">80% Complete</span>
+                                            </div>
+                                        </div>
+                                        <p>
+                                            Put value for "Cover Image" field to increase your skill up to "5%"
+                                        </p>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
 
                 </aside>
 
@@ -233,7 +268,7 @@
                 <div class="col-8 resume py-2 mr-2">
 
                     <div class="tab-content container-fluid">
-                        <div class="collapse mb-5" id="tab-1">
+                        <div class="collapsed mb-5" id="tab-1">
                             <div class="row">
                                 <div class="col-lg-10">
                                     <h1>Wellcome to ~Candidate Name~</h1>
@@ -252,7 +287,7 @@
                                         style="border: solid 0.5px rgba(0, 0, 0, 0.075);">
                                 </div>
                                 <div class="col-lg-9 py-5">
-                                    <button type="button" class="btn btn-default py-3"
+                                    <button type="button" class="btn btn-default py-2 px-5"
                                         style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747; border-radius: 0%;">Browse</button>
                                     <p>Max file size is 1MB, Minimum dimension: 270x210 And Suitable files are .jpg &
                                         .png</p>
@@ -265,7 +300,7 @@
                                         style="border: solid 0.5px rgba(0, 0, 0, 0.075);">
                                 </div>
                                 <div class="col-lg-9 py-5 mt-3">
-                                    <button type="button" class="btn btn-default py-3"
+                                    <button type="button" class="btn btn-default py-2 px-5"
                                         style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747; border-radius: 0%;">Browse
                                         Cover</button>
                                     <p>Max file size is 1MB, Minimum dimension: 270x210 And Suitable files are .jpg &
@@ -472,7 +507,7 @@
 
                             <div class="row">
                                 <div class="col-lg-12 mt-2 mb-3">
-                                    <h4> <i class="fa fa-graduation-cap"
+                                    <h4> <i class="fas fa-graduation-cap"
                                             style="color: #1e1f21; margin-inline-end: 10px;">
                                         </i>EDUCATION</h4>
                                 </div>
@@ -513,7 +548,7 @@
                                     </p>
                                 </div>
                                 <div class="col-lg-1">
-                                    <i class="fa fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
+                                    <i class="fas fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
                                     <i class="far fa-trash-alt ml-1" data-toggle="tooltip" title="Remove"></i>
                                 </div>
                             </div>
@@ -535,13 +570,13 @@
                                     </p>
                                 </div>
                                 <div class="col-lg-1">
-                                    <i class="fa fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
+                                    <i class="fas fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
                                     <i class="far fa-trash-alt ml-1" data-toggle="tooltip" title="Remove"></i>
                                 </div>
                             </div>
 
                             <div class="row addnew_icon mt-5" data-toggle="collapse" data-target="#addnewItem">
-                                <i class="fa fa-plus mt-2 mr-2"></i>
+                                <i class="fas fa-plus mt-2 mr-2"></i>
                                 <p> Add New</p>
                             </div>
 
@@ -580,7 +615,7 @@
 
                                 <div class="row">
                                     <div class="col-lg-12 my-3 mb-4">
-                                        <button type="button" class="btn btn-default py-3"
+                                        <button type="button" class="btn btn-default py-3 px-5"
                                             style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747; border-radius: 0%;">Add
                                             Education</button>
                                     </div>
@@ -591,7 +626,7 @@
 
                             <div class="row">
                                 <div class="col-lg-12 mt-2 mb-3">
-                                    <h4 id="EXPERIANCE"> <i class="fa fa-briefcase"
+                                    <h4 id="EXPERIANCE"> <i class="fas fa-briefcase"
                                             style="color: #1e1f21; margin-inline-end: 10px;">
                                         </i>EXPERIANCE</h4>
                                 </div>
@@ -624,7 +659,7 @@
                                 </div>
 
                                 <div class="col-lg-1">
-                                    <i class="fa fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
+                                    <i class="fas fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
                                     <i class="far fa-trash-alt ml-1" data-toggle="tooltip" title="Remove"></i>
                                 </div>
                             </div>
@@ -642,13 +677,13 @@
                                 </div>
 
                                 <div class="col-lg-1">
-                                    <i class="fa fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
+                                    <i class="fas fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
                                     <i class="far fa-trash-alt ml-1" data-toggle="tooltip" title="Remove"></i>
                                 </div>
                             </div>
 
                             <div class="row addnew_icon mt-5" data-toggle="collapse" data-target="#addnewexperiance">
-                                <i class="fa fa-plus mt-2 mr-2"></i>
+                                <i class="fas fa-plus mt-2 mr-2"></i>
                                 <p> Add New</p>
                             </div>
 
@@ -690,7 +725,7 @@
 
                                 <div class="row">
                                     <div class="col-lg-12 my-3 mb-4">
-                                        <button type="button" class="btn btn-default py-3"
+                                        <button type="button" class="btn btn-default py-3 px-5"
                                             style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747; border-radius: 0%;">Add
                                             Education</button>
                                     </div>
@@ -717,7 +752,7 @@
                             </div>
 
                             <div class="row addnew_icon mt-5" data-toggle="collapse" data-target="#addnewportfolioPIC">
-                                <i class="fa fa-plus mt-2 mr-2"></i>
+                                <i class="fas fa-plus mt-2 mr-2"></i>
                                 <p> Add New</p>
                             </div>
 
@@ -729,7 +764,7 @@
                                             style="border: solid 0.5px rgba(0, 0, 0, 0.075);">
                                     </div>
                                     <div class="col-lg-9 py-5">
-                                        <button type="button" class="btn btn-default py-3"
+                                        <button type="button" class="btn btn-default py-3 px-5"
                                             style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747; border-radius: 0%;">Browse</button>
                                         <p>Max file size is 1MB, Minimum dimension: 270x210 And Suitable files are .jpg
                                             &
@@ -742,7 +777,7 @@
                                         <input type="text" style="border: solid 1px #d4d4d4; background-color: #fff;">
                                     </div>
                                     <div class="col-lg-4 mt-2">
-                                        <button type="button" class="btn btn-default py-3"
+                                        <button type="button" class="btn btn-default py-3 px-5"
                                             style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747; border-radius: 0%;">Add
                                             Portfolio</button>
                                     </div>
@@ -754,7 +789,7 @@
 
                             <div class="row">
                                 <div class="col-lg-12 mt-2 mb-3">
-                                    <h4> <i class="fa fa-clock" style="color: #1e1f21; margin-inline-end: 10px;">
+                                    <h4> <i class="fas fa-clock" style="color: #1e1f21; margin-inline-end: 10px;">
                                         </i>SKILLS</h4>
                                 </div>
                             </div>
@@ -786,7 +821,7 @@
                                 </div>
 
                                 <div class="col-lg-1">
-                                    <i class="fa fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
+                                    <i class="fas fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
                                     <i class="far fa-trash-alt ml-1" data-toggle="tooltip" title="Remove"></i>
                                 </div>
                             </div>
@@ -805,7 +840,7 @@
                                 </div>
 
                                 <div class="col-lg-1">
-                                    <i class="fa fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
+                                    <i class="fas fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
                                     <i class="far fa-trash-alt ml-1" data-toggle="tooltip" title="Remove"></i>
                                 </div>
                             </div>
@@ -824,13 +859,13 @@
                                 </div>
 
                                 <div class="col-lg-1">
-                                    <i class="fa fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
+                                    <i class="fas fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
                                     <i class="far fa-trash-alt ml-1" data-toggle="tooltip" title="Remove"></i>
                                 </div>
                             </div>
 
                             <div class="row addnew_icon mt-5" data-toggle="collapse" data-target="#addnewskill">
-                                <i class="fa fa-plus mt-2 mr-2"></i>
+                                <i class="fas fa-plus mt-2 mr-2"></i>
                                 <p> Add New</p>
                             </div>
 
@@ -847,8 +882,8 @@
                                         <input type="text" title="Percentage" placeholder="Skill Percentage*"
                                             style="border: solid 1px #d4d4d4; background-color: #fff;">
                                     </div>
-                                    <div class="col-lg-2 mt-5">
-                                        <button type="button" class="btn btn-default py-3"
+                                    <div class="col-lg-2 mt-5 pt-1">
+                                        <button type="button" class="btn btn-default py-3 px-5"
                                             style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747; border-radius: 0%;">Add
                                             Skill</button>
                                     </div>
@@ -860,7 +895,7 @@
 
                             <div class="row">
                                 <div class="col-lg-12 mt-2 mb-3">
-                                    <h4> <i class="fa fa-trophy" style="color: #1e1f21; margin-inline-end: 10px;">
+                                    <h4> <i class="fas fa-trophy" style="color: #1e1f21; margin-inline-end: 10px;">
                                         </i>HONORS & AWARDS</h4>
                                 </div>
                             </div>
@@ -892,13 +927,13 @@
                                 </div>
 
                                 <div class="col-lg-1">
-                                    <i class="fa fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
+                                    <i class="fas fa-cog ml-1" data-toggle="tooltip" title="Edit"></i>
                                     <i class="far fa-trash-alt ml-1" data-toggle="tooltip" title="Remove"></i>
                                 </div>
                             </div>
 
                             <div class="row addnew_icon mt-5" data-toggle="collapse" data-target="#addnewAward">
-                                <i class="fa fa-plus mt-2 mr-2"></i>
+                                <i class="fas fa-plus mt-2 mr-2"></i>
                                 <p> Add New</p>
                             </div>
 
@@ -918,6 +953,14 @@
                                 <div class="row">
                                     <div class="col-lg-12 py-3 mb-4">
                                         <textarea class="form-control" rows="10" id="textarea"></textarea>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-lg-12 my-3 mb-4">
+                                        <button type="button" class="btn btn-default py-3 px-5"
+                                            style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747; border-radius: 0%;">Add
+                                            Award</button>
                                     </div>
                                 </div>
 
@@ -1110,7 +1153,7 @@
 
                                 <div class="row">
                                     <div class="col-lg-3">
-                                        <button type="button" class="btn btn-default px-5" 
+                                        <button type="button" class="btn btn-default px-5"
                                             style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747; border-radius: 0%;">Browse
                                         </button>
                                     </div>
@@ -1178,13 +1221,13 @@
 
                             <div class="row">
                                 <div class="col-lg-3">
-                                    <button type="button" class="btn btn-default px-5 py-3" 
+                                    <button type="button" class="btn btn-default px-5 py-3"
                                         style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747; border-radius: 0%;">Update
                                     </button>
                                 </div>
                             </div>
 
-                           
+
                         </div>
 
                         <div class="collapse mb-5" id="tab-8">
@@ -1202,24 +1245,6 @@
                                 </div>
                             </div>
                         </div>
-
-
-                        <div class="collapse mb-5" id="tab-9">
-                            <div class="row">
-                                <div class="col-lg-10">
-                                    <h1>
-                                        PACKAGES
-                                    </h1>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-lg-12 mt-1">
-                                    <p> There is no package in your list. </p>
-                                </div>
-                            </div>
-                        </div>
-
 
 
 
