--- a/index.htm
+++ b/index.htm
@@ -157,7 +157,7 @@
     <!-- End of Header-->
 
 
-    <section id="cards" class="mt-5 pt-5 container-fluid px-5">
+    <section id="cards" class="mt-5 pt-5 container-fluid ">
         <!-- #FCFCFC -->
 
         <div class="row">
@@ -168,7 +168,7 @@
         </div>
         <div class="row  pb-5 justify-content-center px-2 mx-5 mt-3">
 
-            <div class="col-2 card py-2  mx-3">
+            <div class="col-2 card py-2 border-none mx-3">
                 <div class="row inner-card pt-2">
                     <div class="col-10">
                         <a class="stretched-link " href="">Accounting</a>
@@ -211,7 +211,7 @@
                 </div>
 
             </div>
-            <div class="col-2 card py-2  mx-3">
+            <div class="col-2 card py-2 border-none mx-3">
                 <div class="row inner-card pt-2">
                     <div class="col-10">
                         <a class="stretched-link " href="">Banking</a>
@@ -255,7 +255,7 @@
 
 
             </div>
-            <div class="col-2 card py-2  mx-3">
+            <div class="col-2 card py-2 border-none mx-3">
                 <div class="row inner-card pt-2">
                     <div class="col-10">
                         <a class="stretched-link " href="">Charity & Voluntary</a>
@@ -299,7 +299,7 @@
 
 
             </div>
-            <div class="col-2 card py-2  mx-3">
+            <div class="col-2 card py-2 border-none mx-3">
                 <div class="row inner-card pt-2">
                     <div class="col-10">
                         <a class="stretched-link " href="">Digital & Creative</a>
