--- a/jobs.html
+++ b/jobs.html
@@ -766,7 +766,7 @@
 
                                 <div class="footer-links">
                                     © 2017 - 2021 Visumify All rights reserved. Design by <a class='cs-color'
-                                        href='#'>Visume (PVT) limited</a>
+                                        href='#'>Visumify (PVT) limited</a>
                                 </div>
                             </div>
                             <div class="col-md-3">
